--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,79 +1,14 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
 
-<!-- <header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>เพื่อนใจ</h1>
-    <p class="lead">ชุมชนเพื่อช่วยเหลือและเกื้อกูลจิตใจของกันและกัน</p>
-    <img class="main-logo" src="assets/images/logo-fixed.png" alt="เพื่อนใจ">
-  </div>
-</header> -->
 
-    <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <nav class="" role="navigation">
-                       <ul class="nav sidebar-nav">
-                           <li class="sidebar-brand">
-                               <a href="#">
-                                  Brand
-                               </a>
-                           </li>
-                           <li>
-                               <a href="#">Home</a>
-                           </li>
-                           <li>
-                               <a href="#">About</a>
-                           </li>
-                           <li>
-                               <a href="#">Events</a>
-                           </li>
-                           <li>
-                               <a href="#">Team</a>
-                           </li>
-                           <li class="dropdown">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
-                             <ul class="dropdown-menu" role="menu">
-                               <li class="dropdown-header">Dropdown heading</li>
-                               <li><a href="#">Action</a></li>
-                               <li><a href="#">Another action</a></li>
-                               <li><a href="#">Something else here</a></li>
-                               <li><a href="#">Separated link</a></li>
-                               <li><a href="#">One more separated link</a></li>
-                             </ul>
-                           </li>
-                           <li>
-                               <a href="#">Services</a>
-                           </li>
-                           <li>
-                               <a href="#">Contact</a>
-                           </li>
-                           <li>
-                               <a href="https://twitter.com/maridlcrmn">Follow me</a>
-                           </li>
-                       </ul>
-                   </nav>
-          </div>
-          <div class="col-md-9">
-              <div style="height: 305px">
-                <carousel interval="myInterval">
-                  <slide ng-repeat="slide in slides" active="slide.active">
-                    <img ng-src="{{slide.image}}" style="margin:auto;">
-                    <div class="carousel-caption">
-                      <h4>Slide {{$index}}</h4>
-                      <p>{{slide.text}}</p>
-                    </div>
-                  </slide>
-                </carousel>
-              <div class="row">
-                <div class="col-md-6">
-                  <button type="button" class="btn btn-info" ng-click="addSlide()">Add Slide</button>
-                </div>
-                <div class="col-md-6">
-                  Interval, in milliseconds: <input type="number" class="form-control" ng-model="myInterval">
-                  <br />Enter a negative number or 0 to stop the interval.
-                </div>
-              </div>
+      <!--   <carousel interval="myInterval">
+          <slide ng-repeat="slide in slides" active="slide.active">
+            <img ng-src="{{slide.image}}" style="margin:auto;">
+            <div class="carousel-caption">
+              <h4>Slide {{$index}}</h4>
+              <p>{{slide.text}}</p>
             </div>
+          </slide>
+        </carousel> -->
 
             <!-- <div>
               <h1 class="page-header">Questions:</h1>
@@ -92,28 +27,49 @@
             </p>
           </form> -->
 
-          <div class="row row-no-padding">
-            <div class="col-sm-6 col-md-4" ng-repeat="question in questions">
-              <div class="thumbnail">
-                <img ng-src="{{question.coverImg}}" alt="...">
+<!--           <div id="articleList" class="row">
+            <div class="no-gutter col-sm-6 col-md-4" ng-repeat="article in articles">
+              <div class="mythumbnail" back-img="{{article.coverImg}}" id="{{article._id}}" ng-click="goToArticle(article.id)">
                 <div class="caption">
-                  <h3>{{question.name}}</h3>
-                  <p>{{question.body}}</p>
-                  <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                  <h3>{{article.name}}</h3>
+                  <p>{{article.summary}}</p>
+                  <p><a href="#" class="btn btn-primary" role="button" ng-click="openModal()">Comment</a> <a href="#" class="btn btn-default" role="button">Read More</a></p>
                 </div>
               </div>
             </div>
-          </div> 
-            
-          </div>
-          
+          </div>  -->
 
-        </div>      
+          <div class="row">
+            <div class="col-lg-12">
+<!--               <header class="hero-unit" id="banner">
+                  <h1>เพื่อนใจ</h1>
+                  <p class="lead">ชุมชนเพื่อช่วยเหลือและเกื้อกูลจิตใจของกันและกัน</p>
+                  <img class="main-logo" src="assets/images/logo-fixed.png" alt="เพื่อนใจ">
+                </header> -->
+                <div id="askQuestion" class="input-group input-group-lg">
+                 <input type="text" class="form-control" placeholder="ถาม ปํญหาในใจ...">
+                 <span class="input-group-btn">
+                   <button class="btn btn-default" type="button">ขอใจ</button>
+                 </span>
+               </div><!-- /input-group -->
+             </div><!-- /.col-lg-6 -->
+           </div>
 
-
-
-  
-
-
-
-<div ng-include="'components/footer/footer.html'"></div>
+           <div style="height: 400px;">
+             <carousel interval="3000">
+               <slide  class="samplequotes" ng-repeat="user in sampleusers" active="slide.active">
+                <blockquote>
+                 <div class="row">
+                   <div class="col-sm-10 col-sm-offset-1">
+                     <h3>{{user.reason}}</h3>
+                     <small>{{user.username}}</small>
+                   </div>
+                 </div>
+               </blockquote>
+             </slide>
+     <!--         <div ng-repeat="user in sampleusers" style="display: inline;">
+               <img indicator ng-src="{{user.coverimg}}" class="sampleusers" imgnum="{{$index}}" style="border-radius: 100px">
+             </div> -->
+           </carousel>
+          {{setCurrentSlide()}}
+        </div>
