--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+      <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -26,8 +28,21 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div ng-include="'components/navbar/navbar.html'"></div>
+
     <!-- Add your site or application content here -->
-    <div ui-view=""></div>
+    <div class="container" style="margin-top:51px;">
+      <div class="row">
+        <div class="col-md-2 no-gutter">
+          <div ng-include="'components/sidebar/sidebar.html'"></div>
+        </div>
+        <div class="col-md-10 no-gutter">
+          <div id="main-view" ui-view=""></div>
+        </div>
+      </div>
+    </div>
+
+    <div ng-include="'components/footer/footer.html'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
@@ -55,6 +70,8 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-touch/angular-touch.js"></script>
+      <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -70,6 +87,10 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/news/mainArticles/mainArticles.controller.js"></script>
+          <script src="app/news/mainArticles/mainArticles.js"></script>
+          <script src="app/news/singleArticle/singleArticle.controller.js"></script>
+          <script src="app/news/singleArticle/singleArticle.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/footer/footer.controller.js"></script>
