--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -34,7 +34,7 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+          <button class="btn btn-success btn-lg btn-login" type="submit">
             Login
           </button>
           <a class="btn btn-default btn-lg btn-register" href="/signup">
@@ -47,12 +47,12 @@
           <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
             <i class="fa fa-facebook"></i> Connect with Facebook
           </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
+<!--           <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Connect with Google+
           </a>
           <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
             <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
+          </a> -->
         </div>
       </form>
     </div>
