--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="th_TH"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +14,9 @@
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+      <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
+      <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+      <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -28,10 +31,9 @@
     <![endif]-->
 
     <div ng-include="'components/navbar/navbar.html'"></div>
-
     <!-- Add your site or application content here -->
-      <div id="main-view">
-          <div ui-view=""></div>
+      <div>
+          <div class="ng-cloak" ui-view="" autoscroll="true" style="padding-top:51px;"></div>
       </div>
 
     <div ng-include="'components/footer/footer.html'"></div>
@@ -62,6 +64,15 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+      <script src="bower_components/angular-timeago/src/timeAgo.js"></script>
+      <script src="bower_components/rangy/rangy-core.min.js"></script>
+      <script src="bower_components/rangy/rangy-cssclassapplier.min.js"></script>
+      <script src="bower_components/rangy/rangy-selectionsaverestore.min.js"></script>
+      <script src="bower_components/rangy/rangy-serializer.min.js"></script>
+      <script src="bower_components/textAngular/src/textAngular.js"></script>
+      <script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
+      <script src="bower_components/textAngular/src/textAngularSetup.js"></script>
+      <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -75,6 +86,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/ask/ask.controller.js"></script>
+          <script src="app/ask/ask.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/landing/landing.js"></script>
           <script src="app/main/main.controller.js"></script>
@@ -83,13 +96,16 @@
           <script src="app/news/mainArticles/mainArticles.js"></script>
           <script src="app/news/singleArticle/singleArticle.controller.js"></script>
           <script src="app/news/singleArticle/singleArticle.js"></script>
+          <script src="app/question/question.controller.js"></script>
+          <script src="app/question/question.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/footer/footer.controller.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
-          <script src="components/sidebar/sidebar.controller.js"></script>
+          <script src="components/sidebar/leftsidebar.controller.js"></script>
+          <script src="components/sidebar/rightsidebar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
