--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -102,7 +102,7 @@
 
 
           <div class="questionContent" collapse="isCollapsed" >
-            <img class="questionImg img-responsive" ng-src="{{question.coverImg}}" />
+            <!-- <img class="questionImg img-responsive" ng-src="{{question.coverImg}}" /> -->
             <p>{{question.body}}</p>
             <a ng-mouseover="shake='animated rubberBand'" ng-mouseleave="shake=''" class="btn btn-default questionHelpBtn" href="/questions/{{question._id}}" role="button"><i ng-class="shake" class="fa fa-heart red"></i> ให้ความช่วยเหลือ</a>
             <br/>
