--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -77,7 +77,7 @@
 					</div>
 
 					<div class="questionContent">
-						<img ng-cloak ng-show="question.coverImg" class="questionImg img-responsive" ng-src="{{question.coverImg}}" />
+						<!-- <img ng-cloak ng-show="question.coverImg" class="questionImg img-responsive" ng-src="{{question.coverImg}}" /> -->
 						<!-- <p>{{question.body}}</p> -->
 						<div ng-bind-html="question.body" style="word-wrap: break-word; padding:25px;"></div>
 						<div style="text-align: right;">							
