--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -56,16 +56,11 @@
                  </tr>
          </tbody>
       </table>
-
-      <div id="popTags">
-         <h2 style="text-align: center; font-size: 2.4em; ">pop tags</h2>
-          <table class="btn-group table table-hover">
-              <label class="btn btn-primary" ng-model="radioModel" btn-radio="'Left'">Left</label>
-              <label class="btn btn-primary" ng-model="radioModel" btn-radio="'Middle'">Middle</label>
-              <label class="btn btn-primary" ng-model="radioModel" btn-radio="'Right'">Right</label>
-          </table>
-          
+      <div id="popTags" class="well" style="padding:0; background-color: white;">
+         <h2 style="text-align: center; font-size: 2.4em; padding-bottom:15px; border-bottom: 1px solid #dddddd; ">แท็กยอดนิยม</h2>
+         <jqcloud id="jqcloudtag" style="width:100%; display: block; margin:0 auto;" autoResize="true" words="popTags" height="370" width="155"shape="rectangular" removeOverflowing="false" steps="7" center="{x:0.5, y:0.45}"></jqcloud> 
       </div>
+      <hr>
      </div>
    <tabset class="col-md-8">
       <!-- <h2>มีคนต้องการความช่วยเหลือ มาช่วยกับตอบปัญหาใจกัน!</h2> -->
