--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
+      <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -73,6 +74,8 @@
       <script src="bower_components/textAngular/src/textAngular-sanitize.js"></script>
       <script src="bower_components/textAngular/src/textAngularSetup.js"></script>
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
+      <script src="bower_components/jqcloud2/dist/jqcloud.js"></script>
+      <script src="bower_components/angular-jqcloud/angular-jqcloud.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
