--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -72,7 +72,7 @@
 						<div style="margin: 0 10px;">
 							<i class="fa fa-tag"></i>
 							<a class="topic" ng-href="/topics/{{question.topic}}">{{question.topic}} -</a>
-							<a style="display:inline;" ng-repeat="tag in question.tags" ng-href="/topics/{{tag.name}}">{{tag.name+" "}}</a>
+							<a style="display:inline;" ng-repeat="tag in question.tags" ng-href="/tags/{{tag._id}}">{{tag.name+" "}}</a>
 						</div>
 					</div>
 
