--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,29 +1,72 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
 
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Sign up</h1>
+      <h1>สมัครเป็นเพื่อนใจ</h1>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-10 col-sm-offset-1">
       <form class="form" name="form" ng-submit="register(form)" novalidate>
 
         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
-          <label>Name</label>
+          <label>ชื่อจริง</label>
 
-          <input type="text" name="name" class="form-control" ng-model="user.name"
+          <input placeholder="first name" maxlength="20" type="text" name="name" class="form-control" ng-model="user.firstname"
                  required/>
+          <p class="help-block" ng-show="form.name.$error.required && submitted">
+            A first name is required
+          </p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>นามสกุล</label>
+
+          <input placeholder="last name" maxlength="35" type="text" name="name" class="form-control" ng-model="user.lastname"
+                 required/>
+          <p class="help-block" ng-show="form.name.$error.required && submitted">
+            A last name is required
+          </p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>ชื่อแสดงในเว็บ</label>
+
+          <input placeholder="username" maxlength="20" type="text" name="name" class="form-control" ng-model="user.username"
+                 required/>
+          <p class="help-block" ng-show="form.name.$error.required && submitted">
+            A username is required
+          </p>
+        </div>
+
+        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>เหตุผลที่อยากเป็นเพื่อนใจ</label>
+
+          <textarea placeholder="reason for joining"  maxlength="500" type="text" name="name" class="form-control" ng-model="user.reason"></textarea>
           <p class="help-block" ng-show="form.name.$error.required && submitted">
             A name is required
           </p>
         </div>
 
+        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>แนะนําตัว</label>
+
+          <textarea placeholder="self-introduction" maxlength="20" type="text" name="name" class="form-control" ng-model="user.summary"/></textarea>
+          <p class="help-block" ng-show="form.name.$error.required && submitted">
+            A name is required
+          </p>
+        </div>
+
+
         <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
                                             'has-error': form.email.$invalid && submitted }">
-          <label>Email</label>
+          <label>อีเมล์</label>
 
-          <input type="email" name="email" class="form-control" ng-model="user.email"
+          <input maxlength="65" placeholder="email" type="email" name="email" class="form-control" ng-model="user.email"
                  required
                  mongoose-error/>
           <p class="help-block" ng-show="form.email.$error.email && submitted">
@@ -39,10 +82,11 @@
 
         <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
                                             'has-error': form.password.$invalid && submitted }">
-          <label>Password</label>
+          <label>รหัสผ่าน</label>
 
-          <input type="password" name="password" class="form-control" ng-model="user.password"
+          <input placeholder="password" type="password" name="password" class="form-control" ng-model="user.password"
                  ng-minlength="3"
+                 maxlength="65"
                  required
                  mongoose-error/>
           <p class="help-block"
