--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -51,7 +51,7 @@
           </p>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+<!--         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
           <label>แนะนําตัว</label>
 
@@ -59,7 +59,7 @@
           <p class="help-block" ng-show="form.name.$error.required && submitted">
             A name is required
           </p>
-        </div>
+        </div> -->
 
 
         <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
