--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,6 @@
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
       <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.css" />
-      <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -77,8 +76,6 @@
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <script src="bower_components/jqcloud2/dist/jqcloud.js"></script>
       <script src="bower_components/angular-jqcloud/angular-jqcloud.js"></script>
-      <script src="bower_components/angular-touch/angular-touch.js"></script>
-      <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -105,6 +102,8 @@
           <script src="app/news/singleArticle/singleArticle.js"></script>
           <script src="app/question/question.controller.js"></script>
           <script src="app/question/question.js"></script>
+          <script src="app/share/share.controller.js"></script>
+          <script src="app/share/share.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/footer/footer.controller.js"></script>
