--- a/client/app/account/users/user.html
+++ b/client/app/account/users/user.html
@@ -10,7 +10,7 @@
                 <h1>{{currentUser.username}}</h1>
                 <!-- <h4>Web Developer</h4> -->
                 <p><small>{{currentUser.reason}}</small><p>
-                <!-- <span>{{currentUser.summary}}</span> -->
+                <p><span>{{currentUser.summary}}</span><p>
            </div>
         </div>
     </div>   
@@ -24,4 +24,8 @@
             <div class="col-md-3 col-xs-3 well"><i class="fa fa-pencil"></i> ให้ความรู้<br>{{currentUser.articles_count}}</div>
         </div>
     </div>
+
+	<
+
+
 </div>
