--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,9 @@
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <script src="bower_components/jqcloud2/dist/jqcloud.js"></script>
       <script src="bower_components/angular-jqcloud/angular-jqcloud.js"></script>
+      <script src="bower_components/headroom.js/dist/headroom.js"></script>
+      <script src="bower_components/headroom.js/dist/jQuery.headroom.js"></script>
+      <script src="bower_components/headroom.js/dist/angular.headroom.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
